Incidence nbr./s.: ODOO-609. ODOO-1468.
   - Add field to reports
   - Views and translations
   - New dynamic select field

--- a/easy_invoice_credit_note/wizard/credit_note_report_wizard_view.xml
+++ b/easy_invoice_credit_note/wizard/credit_note_report_wizard_view.xml
@@ -23,6 +23,11 @@
                                 <field name="cancel" class="oe_inline"/>
                             </div>                     
                         </group>
+                        <group name="type_refund">
+                            <field name="type_refund_ids"
+                                widget="many2many_tags"
+                                options="{'no_create': True}"/>
+                        </group>
                     </group>
                     <footer>
                         <button name="button_export_xlsx" string="Export XLSX" type="object"/>
