[UPD][easy_invoice][easy_invoice_employee_expense][easy_invoice_employee_import][easy_invoice_employee_report] Incidence nbr.ODOO-1692 -Added new security groups in easy_invoice main module -Added new access rules in sub-modules -Updated authorized groups on Employee's menu items

--- a/easy_invoice_employee_expense/views/easy_employee_expense_view.xml
+++ b/easy_invoice_employee_expense/views/easy_employee_expense_view.xml
@@ -96,7 +96,7 @@
         <menuitem action="action_easy_employee_expense" 
             id="submenu_action_easy_employee_expense" 
             parent="easy_invoice_employee_cc.menu_action_easy_hr_employee_cc"
-            groups="easy_invoice.easy_invoice_hr_group" 
+            groups="easy_invoice.easy_invoice_hr_expenses_group" 
             sequence="20"/>
 
 
