--- a/easy_invoice_cash/views/easy_recaudation_views.xml
+++ b/easy_invoice_cash/views/easy_recaudation_views.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <odoo>
-  <data>     
+  <data>
         <record id="view_easy_recaudation_form_cashbox" model="ir.ui.view">
             <field name="name">Easy Cashbox</field>
             <field name="model">easy.recaudation</field>
@@ -15,6 +15,10 @@
                     <page name="cash_journal" string="Cash Journal">
                         <label string="Journals"/>
                         <field name="journal_ids" widget="many2many_tags"/>
+                        <label string="Date Report"/>
+                        <field name="report_date_from"/>
+                        <label string=" - "/>
+                        <field name="report_date_to"/>
                         <field name="move_ids">
                             <tree editable="bottom">
                                 <field name="date"/>
