[ODOO-3964][IMP][easy_invoice_cash] -Adds report Easy excel report + Effective journals

--- a/easy_invoice_cash/views/easy_recaudation_views.xml
+++ b/easy_invoice_cash/views/easy_recaudation_views.xml
@@ -16,9 +16,9 @@
                         <label string="Journals"/>
                         <field name="journal_ids" widget="many2many_tags"/>
                         <label string="Date Report"/>
-                        <field name="report_date_from" required="1"/>
+                        <field name="report_date_from"/>
                         <label string=" - "/>
-                        <field name="report_date_to" required="1"/>
+                        <field name="report_date_to"/>
                         <field name="move_ids">
                             <tree editable="bottom">
                                 <field name="date"/>
